可変長にしてコンストラクタを統合